fix(:project_block , second_section) fixed video make it play on mobile n changed background_atachment

--- a/src/sections/HomePage/secondSection/secondSection.module.scss
+++ b/src/sections/HomePage/secondSection/secondSection.module.scss
@@ -36,6 +36,7 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    overflow: hidden;
   }
   .project_text {
     position: absolute;
@@ -68,6 +69,11 @@
         max-width: 350px;
         font-size: 14px;
         margin: auto;
+      }
+    }
+    .container{
+      .img{
+        background-attachment: scroll;
       }
     }
   }
